<resources>
    <string name="app_name">FriendsApp</string>
    <string name="menu_item_Details">Add</string>
    <string name="order_by">Order by..</string>
    <string name="add">Add</string>
    <string name="view_as">View as</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="distance">Distance</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="web">Web</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="show_on_map">Show On Map</string>
    <string name="delete">Delete</string>
    <string name="set_home">Set Home</string>
    <string name="person_name">Person Name</string>
    <string name="todo">TODO</string>
</resources>
