<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Controller.MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_add"
            android:checkable="true"
            android:title="@string/add"
            android:visible="true"
            app:showAsAction="ifRoom" />

        <item android:title="@string/order_by">
            <menu>

                <item
                    android:id="@+id/name"
                    android:title="@string/firstName" />
                <item
                    android:id="@+id/distance"
                    android:title="@string/distance" />

            </menu>
        </item>

        <item android:title="@string/view_as">
            <menu>

                <item
                    android:id="@+id/list"
                    android:title="@string/list" />
                <item
                    android:id="@+id/map"
                    android:title="@string/map" />
            </menu>
        </item>
    </group>
</menu>
